corrige erro na navegação e nas imagens

--- a/html/ex1/contato.html
+++ b/html/ex1/contato.html
@@ -9,13 +9,13 @@
 <body>
 
   <header>
-    <img width="50" src="/images/cogumelo.png" alt="logo">
+    <img width="50" src="./images/cogumelo.png" alt="logo">
     <span>Melhores alunos do Vem Ser de todos os tempos</span>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/sobre.html">Sobre</a></li>
-        <li><a href="/contato.html">Contato</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./sobre.html">Sobre</a></li>
+        <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -44,9 +44,9 @@
 
   <footer>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/sobre.html">Sobre</a></li>
-      <li><a href="/contato.html">Contato</a></li>
+      <li><a href="./">Home</a></li>
+      <li><a href="./sobre.html">Sobre</a></li>
+      <li><a href="./contato.html">Contato</a></li>
     </ul>
     <address>Av. Andaraí, 531 - Porto Alegre</address>
   </footer>
