--- a/html/ex1/index.html
+++ b/html/ex1/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
   <header>
-    <img width="50" src="/images/cogumelo.png" alt="logo">
+    <img width="50" src="./images/cogumelo.png" alt="logo">
     <span>Melhores alunos do Vem Ser de todos os tempos</span>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/sobre.html">Sobre</a></li>
-        <li><a href="/contato.html">Contato</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./sobre.html">Sobre</a></li>
+        <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <h1>Estamos aprendendo HTML e CSS com o melhor professor de todos</h1>
-    <img width="100" src="/images/cogumelo.png" alt="logo">
+    <img width="100" src="./images/cogumelo.png" alt="logo">
     <span>cogumelo 1</span> <br>
-    <img width="100" src="/images/cogumelo.png" alt="logo">
+    <img width="100" src="./images/cogumelo.png" alt="logo">
     <span>cogumelo 2</span> <br>
-    <img width="100" src="/images/cogumelo.png" alt="logo">
+    <img width="100" src="./images/cogumelo.png" alt="logo">
     <span>cogumelo 3</span> <br>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, saepe unde praesentium, voluptas eos magnam cumque ipsam ea sapiente distinctio, laboriosam dolorem voluptatem aliquam maxime aliquid fugiat necessitatibus inventore voluptatum! Ea labore fuga magnam odit sapiente, assumenda excepturi, alias neque nulla totam dolore ipsa accusantium iste aut non porro natus, eaque ullam ratione ex quis? Eum magni mollitia perferendis sapiente, amet laborum alias voluptatum eveniet est similique fuga nihil vel perspiciatis nam molestias. Explicabo minus labore totam fugit? Quaerat reiciendis itaque perspiciatis in ipsa, nostrum quisquam optio ipsam veritatis ab, obcaecati voluptate quis maiores ullam, porro deserunt provident tenetur eos.</p>
@@ -39,9 +39,9 @@
 
   <footer>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/sobre.html">Sobre</a></li>
-      <li><a href="/contato.html">Contato</a></li>
+      <li><a href="./">Home</a></li>
+      <li><a href="./sobre.html">Sobre</a></li>
+      <li><a href="./contato.html">Contato</a></li>
     </ul>
     <address>Av. Andaraí, 531 - Porto Alegre</address>
   </footer>
