--- a/html/ex1/sobre.html
+++ b/html/ex1/sobre.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <img width="50" src="/images/cogumelo.png" alt="logo">
+    <img width="50" src="./images/cogumelo.png" alt="logo">
     <span>Melhores alunos do Vem Ser de todos os tempos</span>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/sobre.html">Sobre</a></li>
-        <li><a href="/contato.html">Contato</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./sobre.html">Sobre</a></li>
+        <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -29,9 +29,9 @@
 
   <footer>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/sobre.html">Sobre</a></li>
-      <li><a href="/contato.html">Contato</a></li>
+      <li><a href="./">Home</a></li>
+      <li><a href="./sobre.html">Sobre</a></li>
+      <li><a href="./contato.html">Contato</a></li>
     </ul>
     <address>Av. Andaraí, 531 - Porto Alegre</address>
   </footer>
