adiciona section na pagina sobre

--- a/html/ex1/sobre.html
+++ b/html/ex1/sobre.html
@@ -18,14 +18,16 @@
       </ul>
     </nav>
   </header>
+  
+  <section>
+    <h1>Sobre a DBC</h1>
 
-  <h1>Sobre a DBC</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/h9HiHkEar-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/h9HiHkEar-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero neque ea placeat vitae temporibus, veritatis modi autem labore quam totam ullam laborum accusantium unde, nemo odio quis atque fugit. Doloribus architecto iure corporis neque vitae. Magni officiis velit magnam nisi doloremque illum aliquam rem est quia. Deserunt quae reprehenderit rerum quam hic modi accusamus illum quibusdam quisquam odio soluta delectus quas omnis adipisci corporis a natus animi, voluptatibus suscipit iusto eius assumenda eum? Doloribus totam fuga, inventore, pariatur deserunt quis doloremque unde quaerat nulla culpa atque ipsum sequi hic omnis incidunt officia aut temporibus saepe sit commodi reprehenderit alias magnam.</p>
-    
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ratione veniam dolorum optio corporis adipisci repellat assumenda, eveniet harum quidem iste maxime dolor cum, necessitatibus vel laboriosam quasi aspernatur quisquam explicabo, aut veritatis magni doloremque. Debitis ratione tempore odit? Nam delectus dolore minima ut minus quia, inventore reiciendis vel, quos, amet harum et dolorem laudantium odit. Illo laudantium officia debitis modi. Impedit ut quas temporibus ex illo exercitationem fuga. Hic laborum minus, facere possimus nihil aspernatur delectus sit vero qui nesciunt rerum voluptates alias quis est sed mollitia fugit officiis voluptate sint, dolor illo cupiditate amet, sequi laudantium. Voluptates, porro.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero neque ea placeat vitae temporibus, veritatis modi autem labore quam totam ullam laborum accusantium unde, nemo odio quis atque fugit. Doloribus architecto iure corporis neque vitae. Magni officiis velit magnam nisi doloremque illum aliquam rem est quia. Deserunt quae reprehenderit rerum quam hic modi accusamus illum quibusdam quisquam odio soluta delectus quas omnis adipisci corporis a natus animi, voluptatibus suscipit iusto eius assumenda eum? Doloribus totam fuga, inventore, pariatur deserunt quis doloremque unde quaerat nulla culpa atque ipsum sequi hic omnis incidunt officia aut temporibus saepe sit commodi reprehenderit alias magnam.</p>
+      
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ratione veniam dolorum optio corporis adipisci repellat assumenda, eveniet harum quidem iste maxime dolor cum, necessitatibus vel laboriosam quasi aspernatur quisquam explicabo, aut veritatis magni doloremque. Debitis ratione tempore odit? Nam delectus dolore minima ut minus quia, inventore reiciendis vel, quos, amet harum et dolorem laudantium odit. Illo laudantium officia debitis modi. Impedit ut quas temporibus ex illo exercitationem fuga. Hic laborum minus, facere possimus nihil aspernatur delectus sit vero qui nesciunt rerum voluptates alias quis est sed mollitia fugit officiis voluptate sint, dolor illo cupiditate amet, sequi laudantium. Voluptates, porro.</p>
+  </section>
 
   <footer>
     <ul>
