corrige de acordo com observações do João na aula

--- a/html/ex1/sobre.html
+++ b/html/ex1/sobre.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <header>
-    <img width="50" src="./images/cogumelo.png" alt="logo">
-    <span>Melhores alunos do Vem Ser de todos os tempos</span>
+
+    <div>
+      <img width="50" src="./images/cogumelo.png" alt="logo">
+      <small>Melhores alunos do Vem Ser de todos os tempos</small>
+    </div>
+    
     <nav>
       <ul>
         <li><a href="./">Home</a></li>
