--- a/html/ex1/contato.html
+++ b/html/ex1/contato.html
@@ -9,8 +9,12 @@
 <body>
 
   <header>
-    <img width="50" src="./images/cogumelo.png" alt="logo">
-    <span>Melhores alunos do Vem Ser de todos os tempos</span>
+    
+    <div>
+      <img width="50" src="./images/cogumelo.png" alt="logo">
+      <small>Melhores alunos do Vem Ser de todos os tempos</small>
+    </div>
+
     <nav>
       <ul>
         <li><a href="./">Home</a></li>
@@ -20,26 +24,28 @@
     </nav>
   </header>
 
-  <form action="">
-    <label for="nome">Digite seu nome completo:</label>
-    <input name="nome" type="text" placeholder="Nome completo">
-    <br><br>
-    <label for="email">Digite seu e-mail:</label>
-    <input name="email" type="email" placeholder="E-mail">
-    <br><br>
-    <label for="questions">Qual o motivo do contato?</label>
-    <select name="questions" id="questions">
-      <option value="q1">HTML é easy demais</option>
-      <option value="q2">CSS vai ser muito bom!</option>
-      <option value="q3">JS vai ser top!</option>
-      <option value="q4">React vai ser maravilhoso!</option>
-    </select>
-    <br><br>
-    <label for="mensagem">Digite sua mensagem:</label> <br>
-    <textarea name="mensagem" id="mensagem" cols="30" rows="10">Mensagem</textarea>
-    <br><br>
-    <input type="submit" value="Salvar">
-  </form>
+  <section>
+    <form action="">
+      <label for="nome">Digite seu nome completo:</label>
+      <input name="nome" type="text" placeholder="Nome completo">
+      <br><br>
+      <label for="email">Digite seu e-mail:</label>
+      <input name="email" type="email" placeholder="E-mail">
+      <br><br>
+      <label for="questions">Qual o motivo do contato?</label>
+      <select name="questions" id="questions">
+        <option value="q1">HTML é easy demais</option>
+        <option value="q2">CSS vai ser muito bom!</option>
+        <option value="q3">JS vai ser top!</option>
+        <option value="q4">React vai ser maravilhoso!</option>
+      </select>
+      <br><br>
+      <label for="mensagem">Digite sua mensagem:</label> <br>
+      <textarea name="mensagem" id="mensagem" cols="30" rows="10">Mensagem</textarea>
+      <br><br>
+      <input type="submit" value="Salvar">
+    </form>
+  </section>
 
 
   <footer>
