--- a/html/ex5/ex1/index.html
+++ b/html/ex5/ex1/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <div class="container menu">
-      <p>Logo</p>
+      <p>Logo</p> <!-- a --->
       <nav>
         <ul>
           <li><a href="../ex1/index.html">Home</a></li>
@@ -23,7 +23,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container"> <!-- usar max-width direto no header e main -->
     <section class="noticias">
       <div class="noticia">
         <div class="noticia-foto"></div>
