--- a/html/ex7/index.html
+++ b/html/ex7/index.html
@@ -10,44 +10,47 @@
 </head>
 <body>
 
-  <nav class="navbar bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container">
-      <a class="navbar-brand text-light">Navbar</a>
-      <ul class="navbar-nav d-flex">
-        <li class="nav-item row">
-          <a class="nav-link active text-light col" aria-current="page" href="#">Home</a>
-          <a class="nav-link active text-light col" aria-current="page" href="#">Produtos</a>
-          <a class="nav-link active text-light col" aria-current="page" href="#">Contatos</a>
-        </li>
-      </ul>
+      <a class="navbar-brand text-white" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse flex-grow-0" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active text-white" href="#">Sobre</a>
+          <a class="nav-item nav-link text-white" href="#">Produtos</a>
+          <a class="nav-item nav-link text-white" href="#">Contato</a>
+        </div>
+      </div>
     </div>
   </nav>
 
   <main>
     <section class="container">
-      <div class="row my-4">
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+      <div class="row mt-4 mb-4 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
-        <div class="col-md-4 col-sm-12">
-          <img src="img.jpg" alt="">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <img class="img-fluid" src="img.jpg" alt="">
           <p class="text-center">Legenda</p>
         </div>
       </div>
